# sentient-avatar

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alert.rules  alert_rules.yml  bootstrap.sh  connect_with_retry.py  deploy.sh  docker-compose.yml  get-models.sh  mkdocs.yml  prometheus.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  update_httpx.py
.github/: codeql.yml  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/consul/: config.json
config/elasticsearch/: elasticsearch.yml
config/grafana/provisioning/dashboards/: dashboards.yml  infrastructure.json  security.json  sentient-avatar.json  services.json  system.json
config/grafana/provisioning/datasources/: datasources.yml
config/kibana/: kibana.yml
config/prometheus/: prometheus.yml  rules.yml
config/qdrant/: config.yaml
config/rabbitmq/: definitions.json  rabbitmq.conf
config/redis/: redis.conf
config/traefik/: traefik.yml
config/vault/: config.hcl
docs/: api.md  development.md  index.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
scripts/: setup_repo.sh
src/: Dockerfile.api  Dockerfile.asr  Dockerfile.avatar  Dockerfile.explainability  Dockerfile.llm  Dockerfile.optimization  Dockerfile.security  Dockerfile.training  Dockerfile.tts  Dockerfile.ui  Dockerfile.versioning  Dockerfile.vision  config.py  constants.py  database.py  logger.py  main.py  monitoring.py  requirements.txt  security.py
src/api/: deps.py
src/api/v1/: api.py
src/api/v1/endpoints/: auth.py  avatar.py  users.py
src/avatar/: avatar_service.py
src/data/: data_pipeline_service.py
src/deployment/: deployment_service.py
src/evaluation/: evaluation_service.py
src/explainability/: explainability_service.py
src/models/: avatar.py  user.py
src/monitoring/: __init__.py  monitoring_service.py
src/optimization/: optimization_service.py
src/schemas/: avatar.py  base.py  user.py
src/security/: __init__.py  security_service.py
src/sentient_avatar/: agent_core.py  audio_pipeline.py  avatar_server.py  memory.py  vision.py
src/sentient_avatar/api/: docs.py
src/sentient_avatar/auth/: auth.py
src/sentient_avatar/cache/: redis_cache.py
src/sentient_avatar/config/: config.py
src/sentient_avatar/frontend/: sillytavern-extension.js
src/sentient_avatar/logging/: logger.py
src/sentient_avatar/monitoring/: grafana.py  metrics.py
src/sentient_avatar/rate_limit/: rate_limiter.py
src/sentient_avatar/services/: asr.py  avatar.py  base.py  factory.py  llm.py  tts.py  vector_store.py  vision.py
src/services/: avatar.py  cognitive.py  emotion.py  physical.py  streaming.py
src/training/: training_service.py
src/versioning/: versioning_service.py
tests/: conftest.py  test_avatar.py  test_core.py  test_e2e.py  test_integration.py  test_server.py  test_services.py
